--- a/4.using upstash vector database.ipynb
+++ b/4.using upstash vector database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "286af2f5-d053-45b6-8a84-a1f2e4060625",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "6e40b916-6842-4cda-8b80-dbc25f20d33a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "0891cb7f-997f-4ede-ad92-aedb9cf1014d",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "eec0c5e6-4288-4661-b066-dfef0beb5602",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "ca40004d-6de5-4797-bc14-7bf8520553e7",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "335970f8-14b6-418d-b14f-7db1a7ff2695",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f9424aa9-040b-4345-9295-25daa4c3bc67",
    "metadata": {},
    "outputs": [],
@@ -84,32 +84,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a2983192-426e-4231-9130-08c35bd24ef1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from upstash_vector import Index, Vector\n",
     "\n",
-    "index = Index(url=\"https://sweet-feline-97483-gcp-usc1-vector.upstash.io\", token=\"********\")\n",
-    "\n",
-    "index.upsert(\n",
-    "  vectors=[\n",
-    "    Vector(\n",
-    "      id=\"id1\",\n",
-    "      vector=[...],\n",
-    "      metadata={\"metadata_field\": \"metadata_value\"},\n",
-    "    )\n",
-    "  ]\n",
-    ")\n",
-    "\n",
-    "index.query(\n",
-    "  vector=[...],\n",
-    "  top_k=1,\n",
+    "index = Index(url=UPSTASH_VECTOR_REST_URL, token=UPSTASH_VECTOR_REST_TOKEN)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97a88eb2-0a9f-4a9b-bd1f-b012f5c3c431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectors=[]\n",
+    "for key,value in dataset.items():\n",
+    "    print(key)\n",
+    "    my_id=key\n",
+    "    embedding=value\n",
+    "    vectors.append(Vector(id=my_id,vector=embedding))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b071c498-49b7-475d-8c29-43dfa2003889",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index.upsert(vectors=vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "22c73bfd-e6f6-468f-99cf-5131cbeffbbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[2]=get_embedding(\"The moose sat near the dog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c0abd519-217f-4b9b-89f4-0342ea766e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Success'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index.upsert(vectors=[Vector(id=2,vector=dataset[2])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bfa28bfc-4f94-4d02-9696-9bd74bce5485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string=\"The moose sat over the dog\"\n",
+    "query_embedding=get_embedding(query_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "527269a4-ee50-4ffb-ba36-5499d355af68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 0.9586149\n",
+      "0 0.7527521\n",
+      "1 0.7056093\n"
+     ]
+    }
+   ],
+   "source": [
+    "results=index.query(\n",
+    "  vector=query_embedding,\n",
+    "  top_k=3,\n",
     "  include_vectors=True,\n",
     "  include_metadata=True,\n",
-    ")"
+    ")\n",
+    "for result in results:\n",
+    "    print(result.id,result.score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed3c4f0-594a-4395-aac6-69410ea50493",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
